--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <div class="container">
       <h1>'Get Weather Conditions From Anywhere!'</h1>
       <label for="location">'Enter a location:'</label>
-      <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
+      <input id="location" type="text" placeHolder="city, state">
+      <button class="btn-success" id="weatherLocation" >Get Current Humidity!</button>
       <div class="errors"></div>
       <div class="showHumidity"></div>
       <div class="showTemp"></div>
